# qa_guru_python_5_18_Poetry_hw

./: .gitignore  README.md  pyproject.toml
