[tool.poetry]
name = "qa-guru-python-5-18-poetry-hw"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nikiforov1709@ya.ru>"]
readme = "README.md"
packages = [{include = "qa_guru_python_5_18_poetry_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0.rc2"
pytest = ">=7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "3.0.0a6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
